# BiKayaOS

./: .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  buildNRun.sh  deploy.sh  run.sh
cmake/: bin.cmake  lib.cmake  uarm.cmake  umps.cmake
include/: asl.h  assertions.h  const.h  const_bikaya.h  core.h  handlers.h  helpers.h  listx.h  macros.h  memory.h  pcb.h  primitive_types.h  printer.h  scheduler.h  system.h  term.h  types_bikaya.h
include/bikaya/: consts.h  helpers.h  primitive_types.h  printer.h  static_assert.h  system.h  term.h  types.h
include/uarm/: uARMtypes.h
kernels/: hello_world.c  phase0.c  phase1.c  phase15.c  phase2.c  producer_consumer.c  test_pcb.c
sources/: asl.c  assertions.c  core.c  handlers.c  helpers.c  main.c  memory.c  pcb.c  phase0.c  phase1.c  phase15.c  primitive_types.c  printer.c  scheduler.c  term.c  types.c
tests/: p1.5test_bikaya_v0.c  p15test_bikaya.c  p2test_bikaya.c  test15.h  test2.h
